Updated RNN model

--- a/04-Recurrent-Neural-Networks/rnn_notebook.ipynb
+++ b/04-Recurrent-Neural-Networks/rnn_notebook.ipynb
@@ -111,6 +111,7 @@
    "source": [
     "unique_chars = sorted(list(set(transcript)))\n",
     "num_classes = len(unique_chars)\n",
+    "char2idx = dict(zip(unique_chars, range(num_classes)))\n",
     "\n",
     "print('Unique characters:', unique_chars)\n",
     "print('Number of unique characters:', num_classes)"
@@ -351,13 +352,132 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "data = ([], [])\n",
+    "print('Pre-processing training data...')\n",
+    "t0 = time.time()\n",
+    "\n",
+    "for i in range(len(transcript) - num_steps - 2):\n",
+    "    x_text = transcript[i: i + num_steps]\n",
+    "    y_text = transcript[i + 1: i + num_steps + 1]\n",
+    "    data[0].append([char2idx[char] for char in x_text])\n",
+    "    data[1].append([char2idx[char] for char in y_text])\n",
+    "\n",
+    "print('Pre-processed {} characters in {:.2f}s'.format(len(transcript), time.time() - t0))\n",
+    "data = (np.array(data[0], dtype=int), np.array(data[1], dtype=int))\n",
+    "data = np.hstack(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sess = tf.InteractiveSession()\n",
+    "init = tf.global_variables_initializer()\n",
+    "sess.run(init)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "max_epochs = 100\n",
+    "\n",
+    "for i in range(max_epochs):\n",
+    "    np.random.shuffle(data_train)\n",
+    "    for j in range(data_train.shape[0] // batch_size):\n",
+    "        start, end = j * batch_size, (j + 1) * batch_size\n",
+    "        x_batch, y_batch = data_train[start:end, :num_steps], data_train[start:end, num_steps:]\n",
+    "        sess.run(train_step, feed_dict={x: x_batch, y: y_batch})"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "## Load Pre-trained Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from rnn_train2 import build_graph"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO:tensorflow:Restoring parameters from ../models/rnn\n"
+     ]
+    }
+   ],
+   "source": [
+    "tf.reset_default_graph()\n",
+    "graph = build_graph('GRU', num_steps=1, batch_size=1)\n",
+    "sess = tf.InteractiveSession()\n",
+    "sess.run(tf.global_variables_initializer())\n",
+    "graph['saver'].restore(sess, tf.train.latest_checkpoint('../models/'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def generate_text(graph, num_chars, prompt):\n",
+    "    state = None\n",
+    "    current_char = char2idx[prompt]\n",
+    "    \n",
+    "    chars = [current_char]\n",
+    "    for i in range(num_chars):\n",
+    "        feed_dict={graph['x']: [[current_char]]}\n",
+    "        if state is not None:\n",
+    "            for j, st in enumerate(state):\n",
+    "                feed_dict[graph['init_state'][j]] = st\n",
+    "        \n",
+    "        preds, state = sess.run([graph['predictions'], graph['final_state']], feed_dict)\n",
+    "        p = np.squeeze(preds)\n",
+    "        p[np.argsort(p)[:-5]] = 0\n",
+    "        p = p / np.sum(p)\n",
+    "        current_char = np.random.choice(num_classes, 1, p=p)[0]\n",
+    "        chars.append(current_char)\n",
+    "        \n",
+    "    chars = map(lambda x: unique_chars[x], chars)\n",
+    "    return ''.join(chars)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Oke. By o.appmiclomole\\'e ricoogOlle? @ThiaC o cep,, fezeg-dDf111C1!prn’lpcaboorarerouceadoulDethelelile aDth h b Cora. biloscepCsrifa li. WDdaE8(8eeveegampnicobmo.EEEilptcolaiKe.S11800000ayeicocac6D1Q33Unamamsone so, ucceg, p?\"hyagipaycicetrcapaclocaceahypthazalo Oen cep)X050Pbbeveegyugane ces C C grypnM Sblr- o gale attic ceshowrimirem\"Aceyevecerotisere a!0hee row%plyou\\'icoccpico laccea C a riplpemcnsW6etteobazetre reaphapDegeacDpeprop hohobinaDere pop grade léohe l cicico zauee\\'lDDadeeDeeesogeuglp57”mpily w? cle ced berore powh3hopPoyoritomaXcphiglomykagriryoriutllyveppay,h33!Datly ocegreedreteraporirita An l ce a sentralomoOhepnut lpoc cyid bpoMomo O ticireicicairpacurare fo? actht.E)p’lirobo aCichohee!? ahm0yhcac0mep ac0ee cec?cp0000E  a57 r’scpOcocosrinoca poho\\'eicicems? p,.OEpDacochom-e-orinereyeglllE)()pEE ceeracochyu Tisinékelec60ee sed, li. o.cyuct cem%hirape aChices p,.OAam00memmmo dilicaeee-ed Wisa aCherepqrusa cuccy cpane-oefDy cucichoslyplyaqoraloriperrem ifeseemmh3peevotay'"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "generate_text(graph, 1000, 'O')"
    ]
   }
  ],
