Updated RNN model

--- a/04-Recurrent-Neural-Networks/rnn_notebook.ipynb
+++ b/04-Recurrent-Neural-Networks/rnn_notebook.ipynb
@@ -14,7 +14,8 @@
    "outputs": [],
    "source": [
     "import tensorflow as tf\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "import os"
    ]
   },
   {
@@ -408,7 +409,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from rnn_train2 import build_graph"
+    "from rnn_model import RNN"
    ]
   },
   {
@@ -425,59 +426,54 @@
     }
    ],
    "source": [
-    "tf.reset_default_graph()\n",
-    "graph = build_graph('GRU', num_steps=1, batch_size=1)\n",
-    "sess = tf.InteractiveSession()\n",
-    "sess.run(tf.global_variables_initializer())\n",
-    "graph['saver'].restore(sess, tf.train.latest_checkpoint('../models/'))"
+    "save_dir = '../models/rnn/'\n",
+    "\n",
+    "with open(os.path.join(args.save_dir, 'config.pkl'), 'rb') as f:\n",
+    "    saved_args = pickle.load(f)\n",
+    "with open(os.path.join(args.save_dir, 'chars_vocab.pkl'), 'rb') as f:\n",
+    "    chars, vocab = pickle.load(f)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def generate_text(graph, num_chars, prompt):\n",
-    "    state = None\n",
-    "    current_char = char2idx[prompt]\n",
-    "    \n",
-    "    chars = [current_char]\n",
-    "    for i in range(num_chars):\n",
-    "        feed_dict={graph['x']: [[current_char]]}\n",
-    "        if state is not None:\n",
-    "            for j, st in enumerate(state):\n",
-    "                feed_dict[graph['init_state'][j]] = st\n",
-    "        \n",
-    "        preds, state = sess.run([graph['predictions'], graph['final_state']], feed_dict)\n",
-    "        p = np.squeeze(preds)\n",
-    "        p[np.argsort(p)[:-5]] = 0\n",
-    "        p = p / np.sum(p)\n",
-    "        current_char = np.random.choice(num_classes, 1, p=p)[0]\n",
-    "        chars.append(current_char)\n",
-    "        \n",
-    "    chars = map(lambda x: unique_chars[x], chars)\n",
-    "    return ''.join(chars)"
+    "tf.reset_default_graph()\n",
+    "model = Model(saved_args, training=False)`"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'Oke. By o.appmiclomole\\'e ricoogOlle? @ThiaC o cep,, fezeg-dDf111C1!prn’lpcaboorarerouceadoulDethelelile aDth h b Cora. biloscepCsrifa li. WDdaE8(8eeveegampnicobmo.EEEilptcolaiKe.S11800000ayeicocac6D1Q33Unamamsone so, ucceg, p?\"hyagipaycicetrcapaclocaceahypthazalo Oen cep)X050Pbbeveegyugane ces C C grypnM Sblr- o gale attic ceshowrimirem\"Aceyevecerotisere a!0hee row%plyou\\'icoccpico laccea C a riplpemcnsW6etteobazetre reaphapDegeacDpeprop hohobinaDere pop grade léohe l cicico zauee\\'lDDadeeDeeesogeuglp57”mpily w? cle ced berore powh3hopPoyoritomaXcphiglomykagriryoriutllyveppay,h33!Datly ocegreedreteraporirita An l ce a sentralomoOhepnut lpoc cyid bpoMomo O ticireicicairpacurare fo? actht.E)p’lirobo aCichohee!? ahm0yhcac0mep ac0ee cec?cp0000E  a57 r’scpOcocosrinoca poho\\'eicicems? p,.OEpDacochom-e-orinereyeglllE)()pEE ceeracochyu Tisinékelec60ee sed, li. o.cyuct cem%hirape aChices p,.OAam00memmmo dilicaeee-ed Wisa aCherepqrusa cuccy cpane-oefDy cucichoslyplyaqoraloriperrem ifeseemmh3peevotay'"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "generate_text(graph, 1000, 'O')"
+    "sess = tf.InteractiveSession()\n",
+    "sess.run(tf.global_variables_initializer())\n",
+    "saver = tf.train.Saver(tf.global_variables())\n",
+    "ckpt = tf.train.get_checkpoint_state(save_dir)\n",
+    "saver.restore(sess, ckpt.model_checkpoint_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n = 1000         # length of string to generate\n",
+    "prompt = 'The '  # prompt for RNN to start generating from"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(model.sample(sess, chars, vocab, n, prompt).encode('utf-8'))"
    ]
   }
  ],
