Load pre-trained model

--- a/04-Recurrent-Neural-Networks/rnn_notebook.ipynb
+++ b/04-Recurrent-Neural-Networks/rnn_notebook.ipynb
@@ -124,8 +124,15 @@
    "source": [
     "## Model Overview\n",
     "\n",
-    "TODO: explain\n",
+    "The input to our RNN is a sequence of numbers, where each number represents a character in our sequence. The output is the same sequence, but shifted over by one character: this way, our RNN learns to generate the next character, while the hidden states summarize the sequential information that came before it. The diagram shows an LSTM cell (a variant of the basic RNN cell we implement below), but the structure of the network is exactly the same - at every time step, the RNN updates its internal/hidden state based on the current input and the previous internal/hidden state, and produces an output based on the internal/hidden state.\n",
     "\n",
+    "<img src=\"../images/RNN.jpg\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<img src=\"../images/RNN.jpg\">"
    ]
   },
@@ -405,50 +412,51 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pickle\n",
+    "from rnn_model import RNN"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from rnn_model import RNN"
+    "save_dir = '../models/rnn/'\n",
+    "\n",
+    "with open(os.path.join(save_dir, 'config.pkl'), 'rb') as f:\n",
+    "    saved_args = pickle.load(f)\n",
+    "with open(os.path.join(save_dir, 'chars_vocab.pkl'), 'rb') as f:\n",
+    "    chars, vocab = pickle.load(f)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "tf.reset_default_graph()\n",
+    "model = RNN(saved_args, training=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "INFO:tensorflow:Restoring parameters from ../models/rnn\n"
+      "INFO:tensorflow:Restoring parameters from ../models/rnn/model.ckpt-25049\n"
      ]
     }
    ],
-   "source": [
-    "save_dir = '../models/rnn/'\n",
-    "\n",
-    "with open(os.path.join(args.save_dir, 'config.pkl'), 'rb') as f:\n",
-    "    saved_args = pickle.load(f)\n",
-    "with open(os.path.join(args.save_dir, 'chars_vocab.pkl'), 'rb') as f:\n",
-    "    chars, vocab = pickle.load(f)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "tf.reset_default_graph()\n",
-    "model = Model(saved_args, training=False)`"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "sess = tf.InteractiveSession()\n",
     "sess.run(tf.global_variables_initializer())\n",
@@ -459,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -469,11 +477,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The or comes and borders, no future on what we send me for the country and eviduty. Suponal Marco - these are their great new nementrative. The inner country.\n",
+      "And the drugs liking our problems.\n",
+      "It’s ridiculous, it’s been changed that I raison the president of country.\n",
+      "We are going to instruct congent - they plad. We're going to take care of something were elect of our mines we're doing.\n",
+      "Get ritting for the pack, and they have very well, those good partons. Just surprised. And I want certainly executive—they have a nice – with the smartest, a factapo show to do it and met for world's happening will: We accurit it on them and we're going to make sure years and they're being—we should say, \"Cousm are into us. And the ones in the world learned a couple old our AbPural richment problem. We've got to lose up and this that a little stripped of it. I guess for you. I love Chicago. I do after the world is being. All over Will and it can't approve. You saw Honsly destroyed and is a disaster. We have\n"
+     ]
+    }
+   ],
    "source": [
-    "print(model.sample(sess, chars, vocab, n, prompt).encode('utf-8'))"
+    "output = model.sample(sess, chars, vocab, n, prompt)\n",
+    "output.replace(\"\\'\", \"'\")\n",
+    "print(output)"
    ]
   }
  ],
