--- a/04-Recurrent-Neural-Networks/rnn_notebook.ipynb
+++ b/04-Recurrent-Neural-Networks/rnn_notebook.ipynb
@@ -412,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -422,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -436,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -446,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -467,28 +467,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "n = 1000         # length of string to generate\n",
-    "prompt = 'The '  # prompt for RNN to start generating from"
+    "n = 1000               # length of string to generate\n",
+    "prompt = 'Hillary '    # prompt for RNN to start generating from"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The or comes and borders, no future on what we send me for the country and eviduty. Suponal Marco - these are their great new nementrative. The inner country.\n",
-      "And the drugs liking our problems.\n",
-      "It’s ridiculous, it’s been changed that I raison the president of country.\n",
-      "We are going to instruct congent - they plad. We're going to take care of something were elect of our mines we're doing.\n",
-      "Get ritting for the pack, and they have very well, those good partons. Just surprised. And I want certainly executive—they have a nice – with the smartest, a factapo show to do it and met for world's happening will: We accurit it on them and we're going to make sure years and they're being—we should say, \"Cousm are into us. And the ones in the world learned a couple old our AbPural richment problem. We've got to lose up and this that a little stripped of it. I guess for you. I love Chicago. I do after the world is being. All over Will and it can't approve. You saw Honsly destroyed and is a disaster. We have\n"
+      "Hillary are, they had no built it always got like behind by the wall, for which if I want our prisoner is a new job-knows, and access and people call real increasements. And we can't forget on stupidity of America from NAFTh Acan insituation acrops and insroriates to protect their corporates regulations, and administration. This is taking new economic infrast workoneld to use not to fully saw auctions. The press that just terrible when aren't seered 15 or the fact that expanded.\n",
+      "Soundy start so many radicalized.\n",
+      "\n",
+      "I will save Cruz – A – I'm killing area guy magnificent golf, which are doing to Ppont rantive our great crods, who I could do that when the hell conf. Believer. I'd like to achieve not loke, room you defeat.\n",
+      "……Core president. And you know where aren't hult, the side or we say hell choiced by really acroknows this.\n",
+      "\n",
+      "Well, he takes a grean period of time. I there law and China – Remember on our country.\n",
+      "He can get it right now.\n",
+      "\n",
+      "That coult hear. He said, \"You know what’s going on. It's\n"
      ]
     }
    ],
