Fix transpose error

--- a/03-Convolutional-Neural-Networks/cnn_notebook.ipynb
+++ b/03-Convolutional-Neural-Networks/cnn_notebook.ipynb
@@ -422,7 +422,7 @@
     "    shuffle = np.random.permutation(x_train.shape[0])\n",
     "    for i in range(0, x_train.shape[0], batch_size):\n",
     "        idx = shuffle[i: i + batch_size]\n",
-    "        x_batch = x_train[idx].reshape(-1, 3, 32, 32).transpose([2, 3, 1])\n",
+    "        x_batch = x_train[idx].reshape(-1, 3, 32, 32).transpose([0, 2, 3, 1])\n",
     "        y_batch = y_train[idx]\n",
     "        sess.run(train_step, feed_dict={x: x_batch, y: y_batch})\n",
     "    l, a = sess.run([lossm accuracy], feed_dict={x: x_train, y: y_train})\n",
