Generate RNN predictions

--- a/04-Recurrent-Neural-Networks/rnn_notebook.ipynb
+++ b/04-Recurrent-Neural-Networks/rnn_notebook.ipynb
@@ -467,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -477,23 +477,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hillary are, they had no built it always got like behind by the wall, for which if I want our prisoner is a new job-knows, and access and people call real increasements. And we can't forget on stupidity of America from NAFTh Acan insituation acrops and insroriates to protect their corporates regulations, and administration. This is taking new economic infrast workoneld to use not to fully saw auctions. The press that just terrible when aren't seered 15 or the fact that expanded.\n",
-      "Soundy start so many radicalized.\n",
+      "Hillary to the border and differents interests.\n",
       "\n",
-      "I will save Cruz – A – I'm killing area guy magnificent golf, which are doing to Ppont rantive our great crods, who I could do that when the hell conf. Believer. I'd like to achieve not loke, room you defeat.\n",
-      "……Core president. And you know where aren't hult, the side or we say hell choiced by really acroknows this.\n",
+      "We said -gailing, because I make a big, big path. For interalm, voted as far supportion. Hillary knows itself, they don't have you unat Ford, but from Persons that they were wrong. Remember? The fanmine. And I know under announce of lives leaders. Inside.\n",
       "\n",
-      "Well, he takes a grean period of time. I there law and China – Remember on our country.\n",
-      "He can get it right now.\n",
+      "And yet we spent, it built a place in New York, I made such a massive trade deals.\n",
       "\n",
-      "That coult hear. He said, \"You know what’s going on. It's\n"
+      "I want to go back that she has to rebuild our country is going to have many, anjay, you know, all of the people received $50 million. It's so weak and now he said, \"What you've been a member, it will be nice is now because it's larce.\n",
+      "I was up, I said, \"Last time I love this positions of Afghanistan saying \"Do, it's solith says he'll take that carnactod leaving. And I'm going to be so bad. I spent him from the nation – I mean, okay? I love me for not probably trillions of dollars ground the Russians forget, so, as you know what a disaster for sometimes to have a strong permic.\n",
+      "\n",
+      "Absolutely from 30 tremeno Christ\n"
      ]
     }
    ],
